[package]
name = "bl602-pac"
version = "0.1.0"
authors = ["Sipeed Co.,Ltd. <support@sipeed.com>", "luojia65 <me@luojia.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "*"
riscv-rt = "*"
bare-metal = "*"
vcell = "*"
